# finbot

./: .env.example  .gitignore  ASSIGNMENT_COMPLETION_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  evaluation_results_10_may_2026.md  main.py  package-lock.json  pyproject.toml  ragas_health_monitor.py  run_server.py
data/evaluation/: internal_evaluation_employee_20260510_100526.json  internal_evaluation_engineering_20260510_100127.json  internal_evaluation_finance_20260509_222650.json  internal_evaluation_hr_20260510_094136.json  internal_evaluation_marketing_20260510_095238.json  test_dataset.json
docs/: ARCHITECTURE.md  Component 1.md  Component 2.md  Component 3.md  PROJECT_HISTORY.md  README.md  TECHNICAL_DOCUMENTATION.md
docs/api/: README.md
docs/core/: GUARDRAILS.md  README.md
docs/evaluation/: README.md
docs/models/: README.md
docs/tests/: README.md
frontend/: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  dev.sh  next.config.js  package-lock.json  package.json  setup.sh  tailwind.config.js  tsconfig.json
frontend/components/: ChatInterface.tsx  Header.tsx
instructions/: Assignment_Instruction.md
scripts/: csv_ingestion_optimization.py  seed_demo_docs.py  seed_demo_users.py
src/: README.md  __init__.py
src/api/: README.md  __init__.py  documents.py  main.py  search.py  users.py
src/cli/: README.md  __init__.py  __main__.py  ingest.py  test.py
src/core/: config.py  database.py  document_processor.py  enhanced_search.py  query_router.py  rag_system.py  vector_store.py
src/evaluation/: README.md  (+5 more)
(+34 files in other folders)
