[project]
name = "finbot"
version = "0.1.0"
description = "FinBot - Advanced RAG application with RBAC for FinSolve Technologies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docling>=1.0.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0", 
    "semantic-router>=0.0.20",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "ragas>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "python-docx>=0.8.11",
    "pypdf>=3.0.0",
    "markdown>=3.5.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic-settings>=2.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["finbot*"]

[project.scripts]
finbot = "finbot.cli.__main__:app"
